--- a/Anime-Head.css
+++ b/Anime-Head.css
@@ -14,6 +14,9 @@ body{
     color: burlywood;
     scroll-behavior: smooth;
 }
+*::selection{
+    background-color: teal;
+}
 nav{
     padding: 5px;
     position: fixed;
