--- a/Anime-Head.css
+++ b/Anime-Head.css
@@ -31,9 +31,10 @@ nav{
     background-color: rgba(33, 33, 33, 0.94);
     /* vertical-align: top; */
 }
-nav>input[type="search"]{
+nav input[type="search"]{
     /* max-width: 30vw; */
     height: 36px;
+    width: 100%;
     min-width: 15vw;
     text-align: center;
     background-color: rgb(33, 33, 33);
@@ -42,7 +43,7 @@ nav>input[type="search"]{
     color: burlywood;
     transition: 0.25s;
 }
-nav>input[type="search"]:focus{
+nav input[type="search"]:focus{
     outline: none;
     background-color: rgb(36, 36, 36);
     border: 2px solid gold;
@@ -52,7 +53,7 @@ nav>input::placeholder{
 }
 nav>div:nth-of-type(2){
     /* width: 14vw; */
-    flex: 0.45;
+    flex: 0.38;
 }
 nav>div:nth-of-type(2)>a:nth-of-type(2)>button{
     margin-left: 10px;
@@ -64,10 +65,10 @@ nav>*{
 }
 .sign{
     /* padding: 3px; */
-    width: 70px;
+    /* width: 43%; */
+    width: 5vw;
     height: 36px;
     transition: 0.3s;
-    vertical-align: middle;
     border-radius: 14px;
     border: none;
     background-color: gold;
@@ -75,7 +76,8 @@ nav>*{
 .sign:hover{
     cursor: pointer;
     /* height: 40px; */
-    width: 80px;
+    /* width: 48%; */
+    width: 6vw;
 }
 .sign:active{
     background-color:goldenrod;
