Replaced Bleach with Naruto Shippuden also made it so it is easier to read the synopsis of an anime by increasing the font size and line height

--- a/Anime_pages/anime-page.css
+++ b/Anime_pages/anime-page.css
@@ -36,3 +36,11 @@ section p>span{
     font-weight: bold;
     color: rgb(224, 222, 70);
 }
+section>div:nth-of-type(2)>p{
+    line-height: 1.7rem;
+    font-size: 1.1rem;
+}
+section>div:nth-of-type(2)>h3{
+    margin-top: 1.5rem;
+    font-size: 1.5rem;
+}
