--- a/Anime-Head.css
+++ b/Anime-Head.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 *{
     margin: 0;
     padding: 0;
@@ -7,12 +10,11 @@ h1,h2,h3,h4,h5,h6{
     color: goldenrod;
 }
 body{
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
     background-color: rgb(53, 51, 51);
     padding-top: 52px;
     padding-left: 10px;
     color: burlywood;
-    scroll-behavior: smooth;
 }
 *::selection{
     background-color: teal;
