Added newbie section and improved ui

--- a/Anime-Footer.css
+++ b/Anime-Footer.css
@@ -2,7 +2,8 @@
     /* background-image: url("https://t4.ftcdn.net/jpg/03/88/10/67/360_F_388106784_pdvyrCGVIPf5kCvWtXR1aU6QL2asH4vw.jpg"); */
     height: 60vh;
     margin: -10px;
-    margin-top: 25vh;
+    margin-top: 15vh;
+    width: 102vw;
     background-color: black;
     /* background-repeat: no-repeat;
     background-size: cover; */
