--- a/Anime_pages/anime-page.css
+++ b/Anime_pages/anime-page.css
@@ -12,6 +12,9 @@ section{
     height: 40vh;
     padding: 0 10px 0 0;
 }
+section:nth-of-type(1){
+    margin-bottom: 100px;
+}
 section img, section div{
     height: 40vh;
 }
