--- a/Anime_pages/anime-page.css
+++ b/Anime_pages/anime-page.css
@@ -47,3 +47,7 @@ section>div:nth-of-type(2)>h3{
     margin-top: 1.5rem;
     font-size: 1.5rem;
 }
+section>div:nth-of-type(2)>p{
+    overflow: scroll;
+    height: 35vh;
+}
