--- a/Anime-Footer.css
+++ b/Anime-Footer.css
@@ -3,7 +3,7 @@
     height: 60vh;
     margin: -10px;
     margin-top: 15vh;
-    width: 102vw;
+    width: auto;
     background-color: black;
     /* background-repeat: no-repeat;
     background-size: cover; */
